# map-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  changelog.md  map-compiler.sln
code/app/: app.vcxproj  app.vcxproj.filters  compiler.cpp  help.cpp  main.cpp  table_builder.cpp
code/app/includes/: compiler.hpp  help.hpp  table_builder.hpp
code/common/: bytebool.h
code/compiler/: assets_loader.cpp  bsp.cpp  bsp_analyze.cpp  bsp_scale.cpp  bspfile_abstract.cpp  bspfile_ibsp.cpp  compiler.cpp  compiler.vcxproj  compiler.vcxproj.filters  convert_bsp.cpp  convert_map.cpp  convert_obj.cpp  etclib.cpp  help.cpp  image.cpp  imagelib.cpp  light.cpp  light_bounce.cpp  light_ydnar.cpp  lightmaps_ydnar.cpp  map.cpp  md4.cpp  minimap.cpp  path_init.cpp  shaders.cpp  vfs.cpp  vis.cpp
code/compiler/includes/: assets_loader.hpp  bspfile.h  etclib.h  game_wolf.h  l_net_wins.h  q3map2.h  vfs.h
code/libs/common/: compiler.h  picomodel.h
code/libs/compiler/: bbox.c  brush.cpp  bsp.c  bspfile_ibsp.cpp  bspfile_rbsp.cpp  cmdlib.c  cmdlib.cpp  compiler.c  compiler.vcxproj  compiler.vcxproj.filters  convert_map.cpp  decals.cpp  facebsp.cpp  help.c  image.c  image.cpp  inout.c  inout.cpp  jpgd.cpp  l_net_wins.c  l_net_wins.cpp  leakfile.c  light.c  light.cpp  light_ydnar.c  light_ydnar.cpp  lightmaps_ydnar.c  lightmaps_ydnar.cpp  model.cpp  patch.cpp  path_init.c  path_init.cpp  portals.cpp  shaders.c  shaders.cpp  surface.c  surface.cpp  surface_meta.cpp  threads.c  threads.cpp  (+4 more)
code/libs/compiler/includes/: cmdlib.h  imagelib.h  inout.h  l_net.h  l_net_wins.h  md4.h  md5lib.h  polyset.h  q3map2.h  qfiles.h  qthreads.h  scriplib.h  trilib.h  unzip.h  vfs.h
code/libs/picomodel/: picointernal.c  picointernal.cpp  picomodel.cpp  picomodel.vcxproj  picomodel.vcxproj.filters  picomodules.c  pm_3ds.c  pm_ase.cpp  pm_md2.c  pm_ms3d.cpp  pm_obj.c  pm_obj.cpp  pm_terrain.c
code/libs/picomodel/includes/: picointernal.h
code/libs/picomodel/lwo/: clip.cpp  lwob.c  surface.cpp  vmap.cpp
code/libs/picomodel/lwo/includes/: lwo2.h
code/picomodel/: picointernal.cpp  picomodules.cpp  pm_obj.cpp  pm_terrain.cpp
code/picomodel/includes/: picointernal.h  pm_fm.h
code/picomodel/lwo/: envelope.cpp  list.cpp  lwio.cpp  lwo2.cpp  lwob.cpp  pntspols.cpp
code/tests/: table_builder_tests.cpp  tests.vcxproj  tests.vcxproj.filters
ext/argh/: argh.h
ext/lua/: lua.vcxproj  lua.vcxproj.filters
scripts/: bsp-only.bat  bsp-to-ase-model-only.bat  bsp-to-ase.bat  bsp-to-map.bat  bsp-to-obj-model-only.bat  bsp-to-obj.bat  compile-test.bat  final-high-bounce-8.bat  final-high.bat  final-low-bounce-8.bat  final-low.bat  final-medium-bounce-8.bat  final-medium.bat  light-only.bat  test-fast-vis-no-lights.bat  test-fast-vis-vertex-lights.bat  test-full-bounce-8.bat  test-full.bat  test-no-lights.bat  vertex-light-only.bat  vis-only.bat
src/: CMakeLists.txt  assets_loader.cpp  bsp.cpp  bsp_analyze.cpp  bsp_scale.cpp  bspfile_abstract.cpp  cmdlib.h  convert_ase.cpp  convert_bsp.cpp  convert_map.cpp  convert_obj.cpp  ddslib.h  filematch.h  fog.cpp  game_wolfet.h  globaldefs.h  help.cpp  image.cpp  imagelib.cpp  imagelib.h  inout.cpp  inout.h  light.cpp  light_bounce.cpp  light_trace.cpp  light_ydnar.cpp  lightmaps_ydnar.cpp  m4x4.cpp  main.cpp  map.cpp  mathlib.h  mesh.cpp  minimap.cpp  model.cpp  path_init.cpp  polylib.cpp  polylib.h  q3map2.h  scriplib.cpp  scriplib.h  (+8 more)
